src/components/Viewer/Message/styles.scss
.Message {
  margin: 10px 0;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;

  &:first-child { margin-top: 0; }
  &:last-child { margin-bottom: 0; }

  > .portrait {
    width: 32px;
    height: 50px;
    position: relative;
    overflow: hidden;

    display: flex;
    flex-direction: column;
    vertical-align: middle;
    position: relative;

    + .content p {
      padding: 5px;
      padding-left: 10px;
    }
  }

  p {
    margin: 0;
    padding: 5px 0;
    max-width: 500px;
  }

  .talk {
    color: rgb(240, 240, 240);

    &.type {
      display: none;
    }
  }

  .shout {
    color: rgb(255, 239, 80);
  }

  .whisper {
    color: rgb(128, 128, 128);
  }

  .tell {
    color: rgb(32, 255, 32);
  }

  .server {
    color: rgb(176, 176, 176);
  }

  .server {
    color: rgb(255, 102, 1);
  }

  .dm {
    color: rgb(16, 223, 255);
  }

  .character {
    color: #8778ef;
    padding-bottom: 0;
  }
}

